2003-11-14 Erik Petrich <epetrich@ivorytower.norman.ok.us>
	
	* src/SDCCicode.c (geniCodeAddressOf): fixed part of bug #840381
	* src/SDCCopt.c (replaceRegEqv, isLocalWithoutDef): fixed other part
	(SIGSEV) of bug #840381
	* src/SDCCmain.c (linkEdit, assemble): fixed bug #841606 (don't
	unlink new file before rename if new and old filenames are the same)

2003-11-13 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/main.c: started fixing bug #737001 (SDCC not clearing
	uninitialized variables) for the mcs51. Set environment variable 
	SDCC_GENRAMCLEAR to test. 
	xdata initialization slightly shorter

2003-11-12 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	* src/SDCCsymt.c (addSymTypeChain, compareTypesExact): fixed bugs
	#838241 & 780691 (basicly the same bug)
	* src/SDCCBBlock.c (iCode2eBBlock): fixed bug #840148
	* src/SDCCBBlock.c (iCodeFromeBBlock): fixed bug #840162

2003-11-11 Bernhard Held <bernhard@bernhardheld.de>

        * src/SDCCmain.c (linkEdit): "fix" #834252

2003-11-11 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCast.c (removePostIncDecOps, removePreIncDecOps),
	* src/SDCCast.h,
	* src/SDCC.y: fixed bug #819403

2003-11-08 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* support/regression/fwk/lib/testfwk.c: printn is recursive and thus needs
	the reentrant attribute.
	* src/hc08/gen.c (genPackBits): added missing stack readjustment
	* sim/ucsim/hc08.src/inst.cc (inst_mov): fixed bugs with mov instruction
	simulation
	* src/SDCCast.c (decorateType): fixed bug with storage class not being
	updated during pointer dereference; f.e. ~(((char *)1)*) was being
	erroneously reduced to a literal.
	* src/hc08/ralloc.c (packRegisters, rematStr),
	* src/hc08/gen.c (aopForRemat): allow literals to be rematerialized in
	some cases

2003-11-08 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/main.c: fixed bug #838385. Thanks to Josef Pavlik for finding and fixing